--- a/Application/Home/View/AllInOne/west.html
+++ b/Application/Home/View/AllInOne/west.html
@@ -2,10 +2,14 @@
     <span id="west_usermng">用户管理</span>
     <br>
 </eq>
-<eq name="user_department" value="sc">
+<eq name="user_department" value="hr">
     <span id="west_project_mng">项目管理</span>
     <br>
+</eq>
+<eq name="user_department" value="cg">
     <span id="west_fbs_search">分包商管理</span>
+    <br>
+    <span id="west_gys_search">供应商管理</span>
     <br>
 </eq>
 <span id="west_project_search">项目查询</span>
