--- a/Application/Home/View/Public/header.html
+++ b/Application/Home/View/Public/header.html
@@ -48,6 +48,8 @@
     <script src="__PUBLIC__/js/Lib/pnotify/pnotify.reference.js" type="text/javascript"></script>
     <!--fusioncharts -->
     <script src="__PUBLIC__/js/Lib/FusionCharts/Charts/FusionCharts.js" type="text/javascript"></script>
+    <!--sitedata -->
+    <script src="__PUBLIC__/js/Lib/sitedata/sitedata.js" type="text/javascript"></script>
     <!--jquery.sexy-combo-->
     <!--<script src="__PUBLIC__/js/Lib/jquery.sexy-combo/jquery.sexy-combo.js" type="text/javascript"></script>-->
     <!--tag-it-->
