--- a/Application/Home/View/AllInOne/index.html
+++ b/Application/Home/View/AllInOne/index.html
@@ -179,6 +179,24 @@
                 }
             });
         }
+        if($("#west_gys_search").length >= 1){
+            $("#west_gys_search").button().click(function(event){
+                var tab = $('#tabs li:contains("供应商管理")');
+                var curIndex = tab.index();
+                if(tab.html() != null ) {
+                    maintab.tabs('option', 'active',curIndex);
+                    maintab.tabs( "refresh" );
+                }
+                else {
+                    addTab(maintab,"","供应商管理","/index.php/Home/Gys/gysmng","");
+                    //
+                    var tab = $('#tabs li:contains("供应商管理")');
+                    var curIndex = tab.index();
+                    maintab.tabs('option', 'active', curIndex);
+                    maintab.tabs( "refresh" );
+                }
+            });
+        }
 
         if($("#west_userlogout").length >= 1){
             $("#west_userlogout").button().click(function(event){
