--- a/Application/Home/View/AllInOne/module_xmcbgl.html
+++ b/Application/Home/View/AllInOne/module_xmcbgl.html
@@ -477,12 +477,13 @@
                 '0':"全部",
                 'A' : "客户要求-有VO",
                 'B' : "客户要求-无VO",
-                'C' : "装修设计协调",
-                'D' : "机电设计协调",
-                'E' : "预算漏项或少算",
-                'F' : "工程现场变更",
-                'G' : "采购协调",
-                'H' : "其它"
+                'C' : "分包(或供应商)报价范围变更",
+                'D' : "装修设计疏漏",
+                'E' : "机电设计疏漏",
+                'F' : "预算漏项或少算",
+                'G' : "现场控制疏漏",
+                'H' : "采购疏漏",
+                'I' : "其它"
             };
             if("customer" == srctype){
                 return customer_vo_arr;
