--- a/Application/Home/View/AllInOne/module_xmjbxx.html
+++ b/Application/Home/View/AllInOne/module_xmjbxx.html
@@ -205,13 +205,18 @@
             </tr>
 
             <tr>
-                <td>开工日期:</td><td>{$gc_kg_jh_time}</td>
-                <td>完工日期:</td><td>{$gc_xmwg_khys_jh_time}</td>
+                <td>开工日期:</td><td>{$gc_kg_sj_time}</td>
+                <td>完工日期:</td><td>{$gc_xmwg_khys_sj_time}</td>
             </tr>
             <tr>
                 <td>项目面积:</td><td><input type="text"  id="ys_xm_mj" name="ys_xm_mj"   jb_field="jb_single_save" /></td>
                 <td>合同金额:</td><td><input type="text"  id="ys_hetong_amt" name="ys_hetong_amt"   jb_field="jb_single_save" /></td>
             </tr>
+            <tr>
+                <td>项目状态:</td><td>{$cur_project_status}</td>
+                <td></td><td></td>
+            </tr>
+
         </table>
 <!--        </fieldset>-->
         <br/>
