--- a/Application/Home/View/AllInOne/allmodules.html
+++ b/Application/Home/View/AllInOne/allmodules.html
@@ -39,6 +39,8 @@
 <div id="AllInOneDetail">
     <include file="AllInOne/module_xmjbxx" />
     <include file="AllInOne/module_xmsjgl" />
+    <include file="AllInOne/module_xmrlzygl" />
+    <include file="AllInOne/module_xmcbgl" />
 </div>
 
 
