--- a/Application/Home/View/AllInOne/west.html
+++ b/Application/Home/View/AllInOne/west.html
@@ -2,6 +2,10 @@
     <span id="west_usermng">用户管理</span>
     <br>
 </eq>
+<eq name="userflag" value="3">
+    <span id="west_usersalary">工资管理</span>
+    <br>
+</eq>
 <eq name="user_department" value="hr">
     <span id="west_project_mng">项目管理</span>
     <br>
