--- a/Application/Home/View/AllInOne/index.html
+++ b/Application/Home/View/AllInOne/index.html
@@ -100,7 +100,24 @@
                  }
              });
          }
-
+        if($("#west_usersalary").length >= 1){
+            $("#west_usersalary").button().click(function(event){
+                var tab = $('#tabs li:contains("工资管理")');
+                var curIndex = tab.index();
+                if(tab.html() != null ) {
+                    maintab.tabs('option', 'active',curIndex);
+                    maintab.tabs( "refresh" );
+                }
+                else {
+                    addTab(maintab,"","工资管理","/index.php/Home/User/usersalary","");
+                    //
+                    var tab = $('#tabs li:contains("工资管理")');
+                    var curIndex = tab.index();
+                    maintab.tabs('option', 'active', curIndex);
+                    maintab.tabs( "refresh" );
+                }
+            });
+        }
         //west_createproject
         if($("#west_project_mng").length >= 1){
             $("#west_project_mng").button().click(function(event){
