--- a/Application/Home/View/AllInOne/allmodules.html
+++ b/Application/Home/View/AllInOne/allmodules.html
@@ -38,9 +38,8 @@
 <br>
 <div id="AllInOneDetail">
     <include file="AllInOne/module_xmjbxx" />
-    <include file="AllInOne/module_xmsjgl" />
-    <include file="AllInOne/module_xmrlzygl" />
     <include file="AllInOne/module_xmcbgl" />
+    <include file="AllInOne/module_xmzjlgl" />
 </div>
 
 
