--- a/Application/Home/View/AllInOne/allmodules.html
+++ b/Application/Home/View/AllInOne/allmodules.html
@@ -38,7 +38,7 @@
 <br>
 <div id="AllInOneDetail">
     <include file="AllInOne/module_xmjbxx" />
-    <include file="AllInOne/module_xmzjlgl" />
+    <include file="AllInOne/module_dxmgl" />
 </div>
 
 
